--- a/ASSIGNMENT2/views/layout.hbs
+++ b/ASSIGNMENT2/views/layout.hbs
@@ -1,10 +1,36 @@
-<!DOCTYPE html>
 <html>
   <head>
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link
+      rel='stylesheet'
+      href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css'
+      integrity='sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH'
+      crossorigin='anonymous'
+    />
   </head>
   <body>
+
+    {{! Header/Navbar from w3schools }}
+    <nav class='navbar navbar-expand-sm rounded mb-3'>
+      <div class='container-fluid'>
+        <ul class='navbar-nav'>
+          <li class='nav-item'>
+            <a class='nav-link' href='/'>Home</a>
+          </li>
+          <li class='nav-item'>
+            <a class='nav-link' href='/login'>Login</a>
+          </li>
+          <li class='nav-item'>
+            <a class='nav-link' href='/register'>Register</a>
+          </li>
+          <li class='nav-item'>
+            <a class='nav-link' href='/about'>About this app</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
     {{{body}}}
   </body>
 </html>
