update title and add welcome text for index.js

--- a/ASSIGNMENT2/views/index.hbs
+++ b/ASSIGNMENT2/views/index.hbs
@@ -1,2 +1,12 @@
 <h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<p>Welcome to my {{title}}</p>
+<p>The purpose of this application is to help students track their independent
+  study progress and manage their learning resources via a database stored in
+  MongoDB.</p>
+<p>Use the navigation bar above to access different sections of the application.</p>
+<p>But first:
+  <a href='/login'>Log in</a>
+  or
+  <a href='/register'>register</a>
+  to gain access.
+</p>
