add text centering to views

--- a/ASSIGNMENT2/views/index.hbs
+++ b/ASSIGNMENT2/views/index.hbs
@@ -1,3 +1,4 @@
+{{! <div class='text-center'> }}
 <h1>{{title}}</h1>
 <p>Welcome to my {{title}}</p>
 <p>The purpose of this application is to help students track their independent
@@ -10,3 +11,4 @@
   <a href='/register'>register</a>
   to gain access.
 </p>
+{{! </div> }}
