--- a/ASSIGNMENT2/views/layout.hbs
+++ b/ASSIGNMENT2/views/layout.hbs
@@ -10,34 +10,36 @@
     />
   </head>
   <body>
+    <div class='text-center'>
 
-    {{! Header/Navbar from w3schools }}
-    <header>
-      <nav class='navbar navbar-expand-sm rounded mb-3'>
-        <div class='container-fluid'>
-          <ul class='navbar-nav'>
-            <li class='nav-item'>
-              <a class='nav-link' href='/'>Home</a>
-            </li>
-            <li class='nav-item'>
-              <a class='nav-link' href='/login'>Login</a>
-            </li>
-            <li class='nav-item'>
-              <a class='nav-link' href='/register'>Register</a>
-            </li>
-            <li class='nav-item'>
-              <a class='nav-link' href='/about'>About this app</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
+      {{! Header/Navbar from w3schools }}
+      <header>
+        <nav class='navbar navbar-expand-sm rounded mb-3'>
+          <div class='container-fluid'>
+            <ul class='navbar-nav'>
+              <li class='nav-item'>
+                <a class='nav-link' href='/'>Home</a>
+              </li>
+              <li class='nav-item'>
+                <a class='nav-link' href='/login'>Login</a>
+              </li>
+              <li class='nav-item'>
+                <a class='nav-link' href='/register'>Register</a>
+              </li>
+              <li class='nav-item'>
+                <a class='nav-link' href='/about'>About this app</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </header>
 
-    {{{body}}}
+      {{{body}}}
 
-    <footer class='text-center mt-4'>
-      <p>&copy; 2025 Assignment2. All rights reserved.</p>
-    </footer>
+      <footer class='text-center mt-4'>
+        <p>&copy; 2025 Assignment2. All rights reserved.</p>
+      </footer>
+    </div>
 
   </body>
 </html>
