--- a/ASSIGNMENT2/views/layout.hbs
+++ b/ASSIGNMENT2/views/layout.hbs
@@ -10,7 +10,7 @@
     />
   </head>
   <body>
-    <div class='text-center'>
+    <div class='text-center w-75 mx-auto'>
 
       {{! Header/Navbar from w3schools }}
       <header>
