add additional styling to login and register pages

--- a/ASSIGNMENT2/views/layout.hbs
+++ b/ASSIGNMENT2/views/layout.hbs
@@ -9,7 +9,7 @@
       crossorigin='anonymous'
     />
   </head>
-  <body>
+  <body class='text-bg-secondary'>
     <div class='text-center w-75 mx-auto'>
 
       {{! Header/Navbar from w3schools }}
