--- a/ASSIGNMENT2/views/tasks.hbs
+++ b/ASSIGNMENT2/views/tasks.hbs
@@ -2,7 +2,7 @@
 <a href='/tasks/add' class='btn btn-primary mb-3'>Add New Task</a>
 <table class='table table-striped'>
   <thead>
-    <tr>
+    <tr class='rounded'>
       <th>Title</th>
       <th>Status</th>
       <th>Description</th>
