--- a/ASSIGNMENT2/views/layout.hbs
+++ b/ASSIGNMENT2/views/layout.hbs
@@ -20,12 +20,18 @@
               <li class='nav-item'>
                 <a class='nav-link' href='/'>Home</a>
               </li>
-              <li class='nav-item'>
-                <a class='nav-link' href='/login'>Login</a>
-              </li>
-              <li class='nav-item'>
-                <a class='nav-link' href='/register'>Register</a>
-              </li>
+              {{#if isAuthenticated}}
+                <li class='nav-item'>
+                  <a class='nav-link' href='/tasks'>Tasks</a>
+                </li>
+              {{else}}
+                <li class='nav-item'>
+                  <a class='nav-link' href='/login'>Login</a>
+                </li>
+                <li class='nav-item'>
+                  <a class='nav-link' href='/register'>Register</a>
+                </li>
+              {{/if}}
               <li class='nav-item'>
                 <a class='nav-link' href='/about'>About this app</a>
               </li>
